--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,46 @@
-header{
-    width:100%;
-    padding:20px;
-    background:#ccc;
+body{
+    background-color: beige;
 }
-#name{
-    background-color: aqua;
+.header{
+    width:100%;
+    margin-top: 0px;
+    padding:0px;
+    background-color:#ffffff;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border-bottom: 1px solid gray;
+}
+
+.h1{
+    background-color: #4aaaa5;
+    padding: 10px 10px 10px 10px;
+    margin: 0px;
+    position: relative;
+    left: 20%;
+    width:20%;
+    color:white;
+    text-align: center;
+}
+.list{
+    float:right;
+    position:absolute;
+    right:100px;
+    top:50px;
+}
+.full{
+    background-color: #ffffff
+    height:500px;
+    width:80%;
+    border:1px solid gray;
+    margin: 10px 200px 100px 200px;
+    
+}
+#about{
+    background-color: #ffffff;
+    color:#4aaaa5;
+    padding-left: 10px;
+    border-bottom: 1px solid gray;
+}
+#img{
+    margin-left: 10px;
+    margin-top: 10px;
 }
