--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body{
 .header{
     width:100%;
     margin-top: 0px;
+    margin-bottom: 20px;
     padding:0px;
     background-color:#ffffff;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -35,7 +36,7 @@ body{
     height:500px;
     width:960px;
     border:1px solid gray;
-    margin: 0 auto; 
+    margin: auto;  
     position:static;
     z-index:2;  
 }
@@ -69,12 +70,14 @@ body{
     float:right;
     width:650px;
     font-family:Arial, Helvetica, sans-serif;
+    line-height: 150%;
     
     
 }
 #p2{
     float:right;
     font-family:Arial, Helvetica, sans-serif;
+    line-height: 150%;
 
 }
 #contact-form{
@@ -82,6 +85,10 @@ body{
     font-size: 28px;
     color:#777777;
     float:left;
+}
+input[type=submit] {
+    background-color: #4aaaa5;
+    color:white;
 }
 .container{
     width:800px;
@@ -102,6 +109,17 @@ body{
 a{
     color:darkgray;
     font-family:Arial, Helvetica, sans-serif;
-    font-size:12px;
+    font-size:18px;
     text-decoration: none;
+}
+.footer{
+    height:75px;
+    background-color:#666666;
+    border-top: 5px solid #4aaaa5;
+    margin-top: 200px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
 }
