--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,7 @@ body{
     height:240px; 
     z-index:2;
 }
+
 #img2{
     height:240px;
     width:200px;
@@ -108,15 +109,24 @@ body{
 .images{
     width:900px;
     height:40%;
-    margin: 0 auto;
-   
+    margin: 0 auto;  
+    
 }
+/* .images2{
+    float:left;
+    margin: 20px 50px 20px 50px;
+    width:150px;
+    position:relative;
+} */
+
+
 .images-bottom{
     width:900px;
     height:40%;
-    margin:0 auto;
+    margin:0 auto;  
     
 }
+
 /* .images::after{
 
     content: "";
@@ -128,9 +138,7 @@ body{
     float:right;
     width:650px;
     font-family:Arial, Helvetica, sans-serif;
-    line-height: 150%;
-    
-    
+    line-height: 150%;    
 }
 #p2{
     float:right;
@@ -175,6 +183,8 @@ a{
     text-decoration: none;
 }
 .footer{
+    color: #ffffff;
+    text-align: center;
     height:75px;
     background-color:#666666;
     border-top: 5px solid #4aaaa5;
